--- a/Powerup/Base.lproj/Main.storyboard
+++ b/Powerup/Base.lproj/Main.storyboard
@@ -1377,6 +1377,9 @@ The app uses Social and Emotional Learning (SEL) to empower middle school girls 
                                     <constraint firstAttribute="height" constant="50" id="ebS-Xs-Hoa"/>
                                 </constraints>
                                 <state key="normal" title="Button" image="home_button"/>
+                                <connections>
+                                    <segue destination="i9o-3C-Maz" kind="unwind" unwindAction="unwindToStartWithUnwindSegue:" id="a0y-t0-Us7"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NFe-EU-XXC" userLabel="Map Button">
                                 <rect key="frame" x="365" y="226" width="169" height="36"/>
